Name:                netlink
Version:             0.1
Synopsis:            Netlink communication for Haskell
Homepage:            http://netlink-hs.googlecode.com/
License:             BSD3
License-file:        LICENSE
Author:              David Anderson
Maintainer:          dave@natulte.net
Copyright:           Google Inc. 2010
Stability:           Alpha
Category:            System
Build-type:          Simple
Cabal-version:       >=1.2


Library
  Exposed-modules:   System.Linux.Netlink
                     System.Linux.Netlink.C
                     System.Linux.Netlink.Protocol
  Build-depends:     base >=4 && <5,
                     bytestring >=0.9 && <1.0,
                     cereal >=0.3 && <0.4,
                     haskell98 >=1,
                     unix >=2.4 && <2.5
  Other-modules:     C2HS
  Build-tools:       c2hs > 0.16
  Ghc-options:       -Wall -fwarn-tabs
  Ghc-prof-options:  -auto-all
  Include-dirs:      cbits
